# rapidkit-examples

./: .gitignore  PROFILE_WORKSPACES.md  PUBLICATION_CONTRACT.md  README.md  WORKSPACE_ONBOARDING.md  examples.json  package.json
dotnet-only-workspace/: .gitignore  .workspai-workspace  README.md
my-ai-workspace/: .rapidkit-workspace  .workspai-workspace  README.md  pyproject.toml
my-ai-workspace/.workspai/: workspace.contract.json  workspace.json
my-ai-workspace/ai-agent/: EXAMPLE_README.md  README.md  pyproject.toml  registry.json
my-ai-workspace/ai-agent-nest/: .env.example  README.md  package-lock.json  package.json  registry.json
my-ai-workspace/ai-agent-nest/.rapidkit/: file-hashes.json  snippet_registry.json
my-ai-workspace/ai-agent-nest/migrations/: README.md
my-ai-workspace/ai-agent-nest/src/config/: configuration.ts
my-ai-workspace/ai-agent-nest/src/modules/: index.ts
my-ai-workspace/ai-agent-nest/src/modules/free/auth/api_keys/: api-keys.service.ts
my-ai-workspace/ai-agent-nest/src/modules/free/essentials/deployment/: deployment.service.ts
my-ai-workspace/ai-agent-nest/src/modules/free/essentials/logging/: logging.service.ts
my-ai-workspace/ai-agent-nest/src/modules/free/essentials/middleware/: service.ts
my-ai-workspace/ai-agent-nest/src/modules/free/essentials/settings/: configuration.ts
my-ai-workspace/ai-agent-nest/test/: app.controller.spec.ts
my-ai-workspace/ai-agent/.rapidkit/: file-hashes.json  snippet_registry.json
my-ai-workspace/ai-agent/src/health/: ai_assistant.py  deployment.py  logging.py  middleware.py  settings.py
my-ai-workspace/ai-agent/src/modules/: __init__.py
quickstart-workspace/: .rapidkit-workspace  .workspai-workspace  README.md  pyproject.toml
quickstart-workspace/.workspai/: workspace.contract.json  workspace.json
quickstart-workspace/ecommerce-api/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  registry.json
quickstart-workspace/ecommerce-api/.rapidkit/: file-hashes.json  snippet_registry.json
quickstart-workspace/ecommerce-api/migrations/: README.md
quickstart-workspace/ecommerce-api/src/health/: __init__.py  security_headers.py  settings.py
quickstart-workspace/ecommerce-api/src/modules/: __init__.py
quickstart-workspace/product-api/: README.md  pyproject.toml  registry.json
quickstart-workspace/product-api/.rapidkit/: file-hashes.json  snippet_registry.json
quickstart-workspace/product-api/src/: README.md
quickstart-workspace/product-api/src/health/: cors.py  logging.py
quickstart-workspace/product-api/src/modules/: __init__.py
saas-starter-workspace/saas-admin/: .env.example  README.md  docker-compose.yml  pyproject.toml  registry.json
saas-starter-workspace/saas-admin/.rapidkit/: file-hashes.json  snippet_registry.json
saas-starter-workspace/saas-admin/src/health/: observability_core.py  redis.py  users_core.py  users_profiles.py
saas-starter-workspace/saas-admin/src/modules/: __init__.py
(+145 files in other folders)
