[project]
name = "quickstart-workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Baziar",email = "baziar@live.com"}
]
requires-python = "^3.10"
dependencies = [
    "rapidkit-core (==0.5.5)"
]



[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
