[tool.poetry]
name = "saas-admin"
version = "0.1.0"
description = "Domain-driven FastAPI service generated with RapidKit"
authors = ["rapidkit team"]
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.scripts]
dev = "src.cli:dev"
start = "src.cli:start"
build = "src.cli:build"
test = "src.cli:test"
lint = "src.cli:lint"
format = "src.cli:format"
help = "src.cli:help_cmd"

[tool.poetry.dependencies]
python             = "^3.10"
fastapi            = "^0.139.0"
uvicorn            = { extras = ["standard"], version = "^0.50.2" }
pydantic           = "^2.12.5"
pydantic-settings  = { version = "^2.12.0", extras = ["yaml"] }
# <<<inject:poetry-dependencies>>>
# <<<inject:module-dependencies>>>
asyncpg            = ">=0.29.0,<1.0"
boto3              = ">=1.35.0,<2.0"
docker             = "7.1.0"
email-validator    = ">=2.1.1,<3.0"
httpx              = ">=0.27.2,<1.0"
hvac               = ">=2.3.0,<3.0"
psycopg            = { version = ">=3.1.0,<4.0", extras = ["binary"] }
python-json-logger = ">=2.0.0,<3.0"
pyyaml             = ">=6.0.2,<7.0"
redis              = ">=5.0.0,<6.0"
sqlalchemy         = ">=2.0.0,<3.0"
starlette          = ">=1.3.1,<2.0"
yamllint           = ">=1.35.0,<2.0"
[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
ruff = "^0.14.10"
black = "^26.3.1"
isort = "^7.0.0"
mypy = "^1.19.1"
build = "^1.3.0"

# <<<inject:poetry-dev-dependencies>>>

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
	"integration: mark tests as integration tests",
	"template_integration: mark template integration tests",
]

[tool.ruff]
ignore = ["E501"]
line-length = 100
exclude = [".rapidkit/vendor"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = false
show_error_codes = true
# Ignore vendor snapshots and generated health shims from strict static checking
exclude = "(^\\.rapidkit/vendor/|src/health/|src/main.py$|src/app/)"
